--- a/template/pages/@/view.ejs
+++ b/template/pages/@/view.ejs
@@ -28,7 +28,7 @@
   <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" id="closeModal" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
         <img src="https://community.e-com.plus/uploads/default/optimized/2X/9/96bb08d357008fade272a24bf8b1c8c144a5f99c_2_1035x658.jpeg" style="max-width: 100%">
