chore: remove uppercase from in review

--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -83,6 +83,9 @@ button.close {
     .depoimento-box {
       min-height: 300px;
     }
+    h5 {
+      text-transform: unset !important;
+    }
     height: unset;
   }
   
